# KoGum

./: .env.example  .gitignore  README.md  SETUP.md  TRAINING.md  blog_post.md  fullfinetuning.py  pyproject.toml
docs/: README_base.md  README_instruct.md  README_mid.md
kogum-tokenizer/: CONFIG_SUMMARY.md  special_tokens_map.json  tokenizer_config.json
notebooks/: explore_multilingual_datasets.ipynb
scripts/: run_midtrain_0.5B_16k.sh  run_pretrain_0.5B_16k.sh  run_sft_0.5B_16k.sh  setup_environment.sh
src/kogum/: __init__.py
src/kogum/configs/: __init__.py  kogum_0.5B_16k_kormo.yaml
src/kogum/data_utils/: __init__.py  collator.py  packing.py
src/kogum/model/: __init__.py  configuration_kogum.py  modeling_kogum.py
src/kogum/tools/: __init__.py  benchmark_tokenizer.py  evaluate_checkpoint.py  inspect_batch.py  prepare_data.py  reproduce_batch.py  train_tokenizer.py
src/kogum/train/: __init__.py  arguments.py  midtrain.py  pretrain.py  sft.py  spike_detector.py  trainer.py
