[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kogum"
version = "0.1.0"
description = "KoGum: Korean-centric Language Model (1B with 32K context)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "infidea"}
]
keywords = ["nlp", "korean", "llm", "transformer", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.1.99",
    "tokenizers>=0.15.0",
]

[project.optional-dependencies]
train = [
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "deepspeed>=0.13.0",
    "bitsandbytes>=0.42.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]
all = ["kogum[train,dev]"]

[project.urls]
Homepage = "https://github.com/infidea/KoGum"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kogum = ["configs/*.yaml"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120
